--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,7 @@
   background: #fff;
 }
 ::-webkit-scrollbar-thumb {
-  background: black;
+  background: linear-gradient(to top, #000000 0%, #3d8bff 47%, #ab23ff 99%);
 }
 
 @font-face {
@@ -70,6 +70,10 @@ body {
 
 .gradient {
   @apply bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%;
+}
+
+.scrollbar {
+  @apply bg-gradient-to-r from-[#000000] to-[#c274f3];
 }
 
 .lgradient {
