--- a/app/globals.css
+++ b/app/globals.css
@@ -36,23 +36,11 @@
   background: linear-gradient(to top, #000000 0%, #3d8bff 47%, #ab23ff 99%);
 }
 
-@font-face {
-  font-family: "Satoshi-Regular";
-  src: url("../public/fonts/Satoshi-Regular.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Satoshi-Bold";
-  src: url("../public/fonts/Satoshi-Bold.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Satoshi-Medium";
-  src: url("../public/fonts/Satoshi-Medium.ttf") format("truetype");
-}
 
-@font-face {
+/* @font-face {
   font-family: "Monument Extended Bold";
   src: url("/public/fonts/MonumentExtended-Bold.woff2") format("woff2");
-}
+} */
 
 @tailwind base;
 @tailwind components;
@@ -66,44 +54,4 @@
 
 body {
   background-color: #000000;
-}
-
-.gradient {
-  @apply bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%;
-}
-
-.scrollbar {
-  @apply bg-gradient-to-r from-[#000000] to-[#c274f3];
-}
-
-.lgradient {
-  background: linear-gradient(to top, #000000 0%, #3d8bff 47%, #ab23ff 99%);
-  opacity: 0.5;
-}
-/* 
-@font-face {
-  font-family: "MonumentExtended Regular";
-  src: url("/public/fonts/MonumentExtended-Regular.woff2") format("woff2");
-}
-@font-face {
-  font-family: "Satoshi Regular";
-  src: url("/public/fonts/Satoshi-Regular.woff2") format("woff2");
-}
-@font-face {
-  font-family: "Satoshi Medium";
-  src: url("/public/fonts/Satoshi-Medium.woff2") format("woff2");
-}
-@font-face {
-  font-family: "Satoshi Bold";
-  src: url("/public/fonts/Satoshi-Bold.woff2") format("woff2");
-  font-weight: 600;
-  font-style: normal;
-} */
-
-.hexagon {
-  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-  border: 2px solid #333;
-  height: 100px;
-  width: 100px;
-  background-color: #fff;
 }
