--- a/app/globals.css
+++ b/app/globals.css
@@ -1,46 +1,6 @@
 @import url(https://db.onlinewebfonts.com/c/55d433372d270829c51e2577a78ef12d?family=Monument+Extended+Bold);
 
-/* @font-face {
-  font-family: "Satoshi-Regular";
-  src: url("/public/fonts/Satoshi-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-display: swap;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Satoshi-Medium";
-  src: url("/public/fonts/Satoshi-Medium.woff2") format("woff2");
-  font-weight: 500;
-  font-display: swap;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Satoshi-Bold";
-  src: url("/public/fonts/Satoshi-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-display: swap;
-  font-style: normal;
-} */
-
-::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-}
-::-webkit-scrollbar-button {
-  background: #fff;
-}
-::-webkit-scrollbar-track-piece {
-  background: #fff;
-}
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(to top, #000000 0%, #3d8bff 47%, #ab23ff 99%);
-}
-
-
-/* @font-face {
-  font-family: "Monument Extended Bold";
-  src: url("/public/fonts/MonumentExtended-Bold.woff2") format("woff2");
-} */
+@import url("/public/satoshi/css/satoshi.css");
 
 @tailwind base;
 @tailwind components;
@@ -54,4 +14,53 @@
 
 body {
   background-color: #000000;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+::-webkit-scrollbar-button {
+  background: #fff;
+}
+::-webkit-scrollbar-track-piece {
+  background: #fff;
+}
+::-webkit-scrollbar-thumb {
+  background: #ab23ff;
+}
+
+/* @font-face {
+  font-family: "Monument Extended Bold";
+  src: url("/public/fonts/MonumentExtended-Bold.woff2") format("woff2");
+} */
+
+@layer base {
+  @font-face {
+    font-family: "Satoshi-Regular";
+    src: url("/public/fonts/Satoshi-Regular.woff2") format("woff2"),
+      url("/public/fonts/Satoshi-Regular.woff") format("woff"),
+      url("/public/fonts/Satoshi-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Satoshi-Medium";
+    src: url("/public/fonts/Satoshi-Medium.woff2") format("woff2"),
+      url("/public/fonts/Satoshi-Medium.woff") format("woff"),
+      url("/public/fonts/Satoshi-Medium.ttf") format("truetype");
+    font-weight: 500;
+    font-display: swap;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Satoshi-Bold";
+    src: url("/public/fonts/Satoshi-Bold.woff2") format("woff2"),
+      url("/public/fonts/Satoshi-Bold.woff") format("woff"),
+      url("/public/fonts/Satoshi-Bold.ttf") format("truetype");
+    font-weight: 700;
+    font-display: swap;
+    font-style: normal;
+  }
 }
