--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,3 @@
-@import url(https://db.onlinewebfonts.com/c/55d433372d270829c51e2577a78ef12d?family=Monument+Extended+Bold);
-
-@import url("/public/satoshi/css/satoshi.css");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -30,37 +26,32 @@ body {
   background: #ab23ff;
 }
 
-/* @font-face {
-  font-family: "Monument Extended Bold";
-  src: url("/public/fonts/MonumentExtended-Bold.woff2") format("woff2");
-} */
-
 @layer base {
   @font-face {
-    font-family: "Satoshi-Regular";
-    src: url("/public/fonts/Satoshi-Regular.woff2") format("woff2"),
-      url("/public/fonts/Satoshi-Regular.woff") format("woff"),
-      url("/public/fonts/Satoshi-Regular.ttf") format("truetype");
-    font-weight: 400;
-    font-display: swap;
+    font-family: "Satoshi Bold";
     font-style: normal;
+    font-weight: normal;
+    src: url("../public/fonts/Satoshi-Bold.woff") format("woff");
   }
+
   @font-face {
-    font-family: "Satoshi-Medium";
-    src: url("/public/fonts/Satoshi-Medium.woff2") format("woff2"),
-      url("/public/fonts/Satoshi-Medium.woff") format("woff"),
-      url("/public/fonts/Satoshi-Medium.ttf") format("truetype");
-    font-weight: 500;
-    font-display: swap;
+    font-family: "Satoshi Medium";
     font-style: normal;
+    font-weight: normal;
+    src: url("../public/fonts/Satoshi-Medium.woff") format("woff");
   }
+
   @font-face {
-    font-family: "Satoshi-Bold";
-    src: url("/public/fonts/Satoshi-Bold.woff2") format("woff2"),
-      url("/public/fonts/Satoshi-Bold.woff") format("woff"),
-      url("/public/fonts/Satoshi-Bold.ttf") format("truetype");
-    font-weight: 700;
-    font-display: swap;
+    font-family: "Satoshi Regular";
     font-style: normal;
+    font-weight: normal;
+    src: url("../public/fonts/Satoshi-Regular.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Monument Extended Regular";
+    font-style: normal;
+    font-weight: normal;
+    src: url("../public/fonts/MonumentExtended-Regular.woff2") format("woff");
   }
 }
